--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "inflight",
-  "version": "0.0.0",
-  "license": "MIT",
+  "version": "0.1.0",
+  "license": "Proprietary",
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
