--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
-  "name": "@kreatio/inflight",
-  "version": "0.1.2",
-  "license": "MIT",
+  "name": "inflight",
+  "version": "0.0.0",
   "scripts": {
     "ng": "ng",
     "test": "ng test",
@@ -10,41 +9,40 @@
     "lint": "ng lint"
   },
   "private": false,
-  "dependencies": {},
+  "dependencies": {
+    "@compodoc/compodoc": "^1.1.9"
+  },
   "devDependencies": {
-    "@angular-devkit/core": "^8.1.0",
-    "@angular-devkit/schematics": "^8.1.0",
-    "@angular/animations": "^8.1.0",
-    "@angular/common": "^8.1.0",
-    "@angular/compiler": "^8.1.0",
-    "@angular/compiler-cli": "^8.1.0",
-    "@angular/core": "^8.1.0",
-    "@angular/forms": "^8.1.0",
-    "@angular/http": "^5.2.11",
-    "@angular/language-service": "^8.1.0",
-    "@angular/platform-browser": "^8.1.0",
-    "@angular/platform-browser-dynamic": "^8.1.0",
-    "@angular/router": "^8.1.0",
-    "@compodoc/compodoc": "^1.1.9",
-    "@types/jasmine": "~2.5.53",
-    "@types/jasminewd2": "^2.0.6",
-    "@types/node": "^6.0.118",
-    "codelyzer": "^4.5.0",
-    "core-js": "^2.6.9",
-    "jasmine-core": "~2.6.2",
-    "jasmine-spec-reporter": "~4.1.0",
-    "karma": "~1.7.0",
-    "karma-chrome-launcher": "~2.1.1",
-    "karma-cli": "~1.0.1",
-    "karma-coverage-istanbul-reporter": "^1.4.3",
-    "karma-jasmine": "^1.1.2",
-    "karma-jasmine-html-reporter": "^0.2.2",
-    "ng-packagr": "^1.7.0",
-    "protractor": "~5.1.2",
-    "rxjs": "^6.5.2",
-    "ts-node": "~3.2.0",
-    "tslint": "~5.7.0",
-    "typescript": "~3.4.5",
-    "zone.js": "^0.9.1"
+    "@angular-devkit/build-angular": "~0.801.0",
+    "@angular/animations": "~8.1.0",
+    "@angular/cli": "~8.1.0",
+    "@angular/common": "~8.1.0",
+    "@angular/compiler": "~8.1.0",
+    "@angular/compiler-cli": "~8.1.0",
+    "@angular/core": "~8.1.0",
+    "@angular/forms": "~8.1.0",
+    "@angular/language-service": "~8.1.0",
+    "@angular/platform-browser": "~8.1.0",
+    "@angular/platform-browser-dynamic": "~8.1.0",
+    "@angular/router": "~8.1.0",
+    "@types/jasmine": "~3.3.8",
+    "@types/jasminewd2": "~2.0.3",
+    "@types/node": "~8.9.4",
+    "codelyzer": "^5.0.0",
+    "jasmine-core": "~3.4.0",
+    "jasmine-spec-reporter": "~4.2.1",
+    "karma": "~4.1.0",
+    "karma-chrome-launcher": "~2.2.0",
+    "karma-coverage-istanbul-reporter": "~2.0.1",
+    "karma-jasmine": "~2.0.1",
+    "karma-jasmine-html-reporter": "^1.4.0",
+    "ng-packagr": "^5.3.0",
+    "protractor": "~5.4.0",
+    "rxjs": "~6.4.0",
+    "ts-node": "~7.0.0",
+    "tslib": "^1.9.0",
+    "tslint": "~5.15.0",
+    "typescript": "~3.4.3",
+    "zone.js": "~0.9.1"
   }
 }
