--- a/package.json
+++ b/package.json
@@ -10,7 +10,6 @@
   },
   "private": false,
   "dependencies": {
-    "@compodoc/compodoc": "^1.1.9"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.801.0",
@@ -25,6 +24,7 @@
     "@angular/platform-browser": "~8.1.0",
     "@angular/platform-browser-dynamic": "~8.1.0",
     "@angular/router": "~8.1.0",
+    "@compodoc/compodoc": "^1.1.9",
     "@types/jasmine": "~3.3.8",
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "~8.9.4",
