--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -18,14 +18,14 @@ jobs:
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
     # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
-      uses:
-        - actions/checkout@v2
-        - actions/setup-node@v1.4.2
+    - uses: actions/checkout@v2
 
     # Runs a single command using the runners shell
-    - name: Install npm packages
-      run: npm ci
+    - name: Run a one-line script
+      run: echo Hello, world!
 
     # Runs a set of commands using the runners shell
-    - name: Lint & test
-      run: npm run lint && npm run test
+    - name: Run a multi-line script
+      run: |
+        echo Add other actions to build,
+        echo test, and deploy your project.
