--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -15,18 +15,17 @@ jobs:
     # The type of runner that the job will run on
     runs-on: ubuntu-latest
 
-    strategy:
-      matrix:
-        node-version: [10.x, 11.x]
-
+    # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
-      - uses: actions/checkout@v2
-      - name: Use Node.js ${{ matrix.node-version }}
-        uses: actions/setup-node@v1
-        with:
-          node-version: ${{ matrix.node-version }}
-      - run: npm ci
-      - run: npm run lint
-      - run: npm run test
-        env:
-          CI: true
+    # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
+      uses:
+        - actions/checkout@v2
+        - actions/setup-node@v1.4.2
+
+    # Runs a single command using the runners shell
+    - name: Install npm packages
+      run: npm ci
+
+    # Runs a set of commands using the runners shell
+    - name: Lint & test
+      run: npm run lint && npm run test
